force-app/main/default/src/objects/Lead_Convert_Care_Plan_Field_Mapping_MVN__mdt/Lead_Convert_Care_Plan_Field_Mapping_MVN__mdt.object-meta.xml
<CustomObject>
    <description>Maps lead fields to care plan fields based on care plan record type</description>
    <label>Lead Convert Care Plan Field Mapping</label>
    <pluralLabel>Lead Convert Care Plan Field Mappings</pluralLabel>
</CustomObject>