force-app/main/default/src/objects/Lead_Convert_Care_Plan_Field_Mapping_MVN__mdt/fields/Care_Plan_Field_Name_MVN__c.field-meta.xml
<CustomField>
    <fullName>Care_Plan_Field_Name_MVN__c</fullName>
    <description>Care plan field name to map value to</description>
    <inlineHelpText>Care plan field name to map value to</inlineHelpText>
    <label>Care Plan Field Name</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>