force-app/main/default/src/objects/Lead_Convert_Care_Plan_Field_Mapping_MVN__mdt/fields/Care_Plan_Record_Type_DeveloperName_MVN__c.field-meta.xml
<CustomField>
    <fullName>Care_Plan_Record_Type_DeveloperName_MVN__c</fullName>
    <description>Care plan record type developer name to which this mapping belongs
Used with care plan record type namespace</description>
    <inlineHelpText>Care plan record type developer name to which this mapping belongs</inlineHelpText>
    <label>Care Plan Record Type Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>