force-app/main/default/src/objects/Lead_Convert_Care_Plan_Field_Mapping_MVN__mdt/fields/Care_Plan_Record_Type_Namespace_Pref_MVN__c.field-meta.xml
<CustomField>
    <fullName>Care_Plan_Record_Type_Namespace_Pref_MVN__c</fullName>
    <description>Care plan record type namespace prefix to which this mapping belongs
Used with care plan record type developer name</description>
    <inlineHelpText>Care plan record type namespace prefix to which this mapping belongs</inlineHelpText>
    <label>Care Plan Record Type Namespace Prefix</label>
    <length>15</length>
    <type>Text</type>
</CustomField>