force-app/main/default/src/objects/Lead_Convert_Care_Plan_Field_Mapping_MVN__mdt/fields/Is_Active_MVN__c.field-meta.xml
<CustomField>
    <fullName>Is_Active_MVN__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Only map the value if the checkbox is checked</description>
    <inlineHelpText>Only map the value if the checkbox is checked</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>