force-app/main/default/src/objects/Lead_Convert_Care_Plan_Field_Mapping_MVN__mdt/fields/Lead_Field_Name_MVN__c.field-meta.xml
<CustomField>
    <fullName>Lead_Field_Name_MVN__c</fullName>
    <description>Lead field name to map value from</description>
    <inlineHelpText>Lead field name to map value from</inlineHelpText>
    <label>Lead Field Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>