force-app/main/default/src/objects/Lead_Convert_Care_Plan_Field_Mapping_MVN__mdt/fields/Text_Value_MVN__c.field-meta.xml
<CustomField>
    <fullName>Text_Value_MVN__c</fullName>
    <description>Text value to populate to the target care plan field.</description>
    <inlineHelpText>Text value to populate to the target care plan field.</inlineHelpText>
    <label>Text Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>