force-app/main/default/src/objects/Lead_Convert_Care_Plan_Field_Mapping_MVN__mdt/validationRules/Cannot_pop_text_lead_simultaneously_MVN.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_pop_text_lead_simultaneously_MVN</fullName>
    <active>true</active>
    <description>Ensures that the Lead Field field and Text Value field do not get populated at the same time.</description>
    <errorConditionFormula>!ISBLANK( Lead_Field_Name_MVN__c ) &amp;&amp;
!ISBLANK( Text_Value_MVN__c )</errorConditionFormula>
    <errorMessage>Cannot populate Lead Field Name and Text Value at the same time.  Remove value for one, then save again.</errorMessage>
</ValidationRule>